<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarPhone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText

        android:id="@+id/editTextNumberPhone"
        android:layout_width="269dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_your_phone_number"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonOTP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberRegion"/>

    <EditText
        android:id="@+id/editTextNumberRegion"
        android:layout_width="68dp"
        android:layout_height="72dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_33"
        android:gravity="center"
        />

    <Button
        android:id="@+id/buttonOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/phone_authentication"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberRegion"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberRegion" />

</androidx.constraintlayout.widget.ConstraintLayout>