<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/backSpace"
                android:layout_weight="1"
                android:src="@drawable/ic_backspace"
                android:layout_width="0dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/profilePic"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/pp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/username"
                    android:text="@string/chatusername"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/state"
                    android:visibility="invisible"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyler"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_above="@+id/linear1"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear3"
                android:padding="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/messageBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:hint="@string/type_a_message"
                        android:padding="5dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="1dp"
                        android:layout_marginStart="5dp"
                        android:textColorHint="#424242"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/attachement"
                    app:tint="@color/black"
                    android:layout_weight="3"
                    android:padding="9dp"
                    android:src="@drawable/ic_attachement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/camera"
                    app:tint="@color/black"
                    android:layout_weight="3"
                    android:padding="9dp"
                    android:src="@drawable/ic_camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/send"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:layout_marginEnd="9dp"
            android:padding="12dp"
            android:src="@drawable/ic_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>